test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-03 21:19:29.636080

